--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "asep",
   "version": "2.9.9",
   "description": "latihan express",
-  "main": "hehe.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index"
   },
   "keywords": [
     "express"
   ],
   "author": "asep",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
+  }
 }
